The wallet qr code
Former-commit-id: 5482e3f1648cb78def5b35b0b4e573545429e59b

--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -11,7 +11,7 @@
 "UILaunchStoryboardName"="LaunchScreen-English";
 
 "已参选"="Have to stand for election";
-"资产"="Assets";
+"社区"="Assets";
 "发现"="Discover";
 "设置"="Settings";
 "语言"="Language";
@@ -209,7 +209,7 @@
 "的单签只读钱包"="";
 "的多签钱包"="";
 "的多签只读钱包"="";
-
+"客服邮箱已复制到粘贴板"="Email copied to clipboard.";
 
 
 
