--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -42,7 +42,7 @@
 "备注"="Note";
 "手续费"="Fee";
 "发送金额"="Send";
-"已同步区块时间"="Last block time";
+"已同步区块时间"="Last Block Time";
 "转账"="Send";
 "侧链充值"="Sidechain Top Up";
 "收款"="Receive";
@@ -282,20 +282,20 @@
 "我要投票"="Vote";
 "投票规则" = "Rules";
 //"票"="votes";
-"重新投票"= "revote";
+"重新投票"= "Revote";
 "变更成功" = "change successed";
 "注销报名72小时后，方可提取质押金"="The registration fund can be withdrawn 72 hours after the registration is cancelled";
 "参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；每次投票最多可选择 36 个超级节点，撤销或更改再次投票生效有" = "When you participate in ELA supernode voting, the ELA in your wallet address are locked in a sense. Voting does not consume ELA other than a small voting transaction fee associated with each time you initiate a new voting transaction. Each vote can be cast to a maximum of 36 supernodes. If you cancel or change your votes, the actual result will take time to propagate.";
 "投票地址数量" = "Number of Vote Addresses";
 "全网投票占比"= "Total Network Vote Percentage";
-"目标地址"= "Target address";
+"目标地址"= "Target Address";
 
 "删除成功"="Delete successed";
 "金额"="Value";
 "手续费"="Fee";
 "转账详情"= "Transaction";
 "下一步"="Next";
-"已复制到粘贴板"= "Copied to the paste board";
+"已复制到粘贴板"= "Copied to clipboard";
 "交易成功"= "tx success";
 "交易失败"="tx failed";
 "请输入票数"="Enter a number";
