--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -10,19 +10,19 @@
 
 "UILaunchStoryboardName"="LaunchScreen-English";
 
-"已参选"="Have to stand for election";
+"已参选"="Election registered";
 "资产"="Assets";
 "发现"="Discover";
 "设置"="Settings";
 "语言"="Language";
 "联系人"="Contacts";
-"您尚未添加联系人"="You have not added a contact yet";
+"您尚未添加联系人"="Without any contact";
 "添加联系人"="New Contact";
-"请输入姓名（必填）"="Name *";
-"请输入钱包地址（必填）"="Wallet Address *";
-"请输入手机号码"="Mobile Number";
+"请输入姓名（必填）"="Name (Required)";
+"请输入钱包地址（必填）"="Wallet address (Required)";
+"请输入手机号码"="Mobile number";
 "请输入邮箱"="Email";
-"请输入备注"="Note";
+"请输入备注"="Remark";
 "添加"="Add";
 "联系人信息"="Contact";
 "编辑"="Edit";
@@ -32,34 +32,34 @@
 "取消"="Cancel";
 "编辑联系人"="Edit Contact";
 "确认修改"="Save";
-"交易详情"="Transaction";
-"交易号"="Transaction ID";
-"交易金额"="Value";
+"交易详情"="Transaction Details";
+"交易号"="Transaction NO.";
+"交易金额"="Amount";
 "接收金额"="Receive";
-"接收地址"="To address";
-"确认时间"="Time Stamp";
+"接收地址"="Address";
+"确认时间"="Timestamp";
 "确认次数"="Confirmations";
-"备注"="Note";
+"备注"="Remark";
 "手续费"="Fee";
-"发送金额"="Send";
+"发送金额"="Amount";
 "已同步区块时间"="Last Block Time";
-"转账"="Send";
+"转账"="Transfer";
 "侧链充值"="Sidechain Top Up";
 "收款"="Receive";
 "交易记录"="Transaction History";
-"复制收款地址"="Copy address";
-"进入地址列表"="Address list";
-"地址列表"="Address list";
-"请输入收款人地址"="To address";
-"请输入金额 可用"="Value (Balance)";
-"请输入备注"="Add note";
+"复制收款地址"="Copy Address";
+"进入地址列表"="Address List";
+"地址列表"="Address List";
+"请输入收款人地址"="Recipient Address";
+"请输入金额 可用"="Amount (Balance)";
+"请输入备注"="Enter remark";
 "下一步"="Next";
-"转账详情"="Details";
-"转账地址"="To address";
-"金额"="Value";
-"汇率"="Exchange rate";
+"转账详情"="Transfer Details";
+"转账地址"="Transfer Address";
+"金额"="Amount";
+"汇率"="Exchange Rate";
 "输入密码"="Password";
-"投票交易"="Vote trading";
+"投票交易"="Vote Transaction";
 "暂无数据,请耐心等待!"="No data available, please be patient!";
 "所有人公钥"="Owner Public Key";
 
@@ -74,24 +74,24 @@
 "确认中"="Pending";
 "未打包"="Unconfirmed";
 "选择联系人"="Select Contact";
-"添加币种"="Add token";
+"添加币种"="Add Token";
 "钱包列表"="Wallet List";
 "创建钱包"="Create Wallet";
 "创建钱包(推荐)"="Create Wallet (Recommend)";
 
 "导入钱包"="Import Wallet";
 "钱包管理"="Wallet Setting";
-"修改钱包名称"="Change wallet name";
-"修改钱包密码"="Change wallet password";
+"修改钱包名称"="Change Wallet Name";
+"修改钱包密码"="Change Wallet Password";
 "导出Keystore"="Export Keystore";
 "导出助记词"="Export Mnemonics";
 "删除钱包"="Delete Wallet";
 "是否删除当前钱包？"="Delete this wallet?";
 "请输入新的钱包名称"="Enter new wallet name";
 "请输入原钱包密码"="Enter current password";
-"请输入新的钱包密码"="Create new password";
-"请再次输入确认钱包密码"="Confirm your new password";
-"安全验证"="Security verification";
+"请输入新的钱包密码"="Enter new password";
+"请再次输入确认钱包密码"="Re-enter new password";
+"安全验证"="Security Check";
 "请输入钱包密码"="Enter your wallet password";
 "确认1"="Enter";
 "请设置Keystore密码"="Enter keystore password";
@@ -102,7 +102,7 @@
 "抄写下您的钱包助记词"="Write down the mnemonics";
 "请在纸上抄下您的助记词 \n 助记词丢失您将永远失去自己的钱包"="Write down your mnemonics. \n losing mnemonic means you lose your wallet";
 "助记词密码（可选）"="Mnemonics Password (Optional)";
-"助记词密码"="Mnemonics password";
+"助记词密码"="Mnemonics Password";
 "请设置8至16位助记词密码"="Enter a password with 8 to 16 characters";
 "请设置8至16位助记词密码1"="Enter a password with 8 to 16 characters";
 "请重复已输入的助记词密码"="Re-enter your password";
@@ -247,9 +247,9 @@
 "请输入节点官网URL（必填)"="Enter node website URL (Required)";
 "确认参选"="Confirm Registration";
 "注销" = "Delete Candidate";
-"添加成功！" = "Add successful!";
-"修改成功！" = "Modify successful!";
-"删除成功" = "Delete successful";
+"添加成功！" = "Added";
+"修改成功！" = "Modified";
+"删除成功" = "Deleted";
 "私钥已复制成功" = "The private key has been copied successfully";
 "已复制到剪贴板" = "Copied to clipboard";
 "余额不足" = "Lack of balance";
@@ -282,7 +282,7 @@
 "我要投票"="Vote";
 "投票规则" = "Rules";
 //"票"="votes";
-"重新投票"= "Revote";
+"重新投票"= "Recast Votes";
 "变更成功" = "change successed";
 "注销报名72小时后，方可提取质押金"="The registration fund can be withdrawn 72 hours after the registration is cancelled";
 "参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；每次投票最多可选择 36 个超级节点，撤销或更改再次投票生效有" = "When you participate in ELA supernode voting, the ELA in your wallet address are locked in a sense. Voting does not consume ELA other than a small voting transaction fee associated with each time you initiate a new voting transaction. Each vote can be cast to a maximum of 36 supernodes. If you cancel or change your votes, the actual result will take time to propagate.";
@@ -290,7 +290,7 @@
 "全网投票占比"= "Total Network Vote Percentage";
 "目标地址"= "Target Address";
 
-"删除成功"="Delete successed";
+"删除成功"="Deleted";
 "金额"="Value";
 "手续费"="Fee";
 "转账详情"= "Transaction";
@@ -410,7 +410,7 @@
 "爱尔兰"="Ireland";
 "以色列"="Israel";
 "意大利"="Italy";
-"牙买加"="Jamaica";                                                
+"牙买加"="Jamaica";
 "新加坡"="Singapore";
 "外蒙古"="Mongolia";
 "墨西哥"="Mexico";
