--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -209,8 +209,8 @@
 "的单签只读钱包"="";
 "的多签钱包"="";
 "的多签只读钱包"="";
-"客服邮箱已复制到粘贴板"="Email copied to clipboard.";
-
+"客服邮箱已复制到粘贴板"="Customer service email copied to clipboard.";
+"社区"="Community";
 
 
 
