label The nationality of
Former-commit-id: ab40fd51338eb17c9f795d18fca5c86b7f231512

--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -544,4 +544,13 @@
 "利比里亚"="Liberia";
 "美属萨摩亚"="Samoa";
 "密克罗尼西亚"="Micronesia";
+"选择"="Select";
+"全选"="Select All";
+"粘贴"="Paste";
+"复制"="Copy";
+
+"剪切"="Cut";
+"拷贝"="Copy";
+"查询"="Look Up";
+"共享…"="Share…";
 
