--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -571,9 +571,16 @@
 "全选"="Select All";
 "粘贴"="Paste";
 "复制"="Copy";
-
 "剪切"="Cut";
 "拷贝"="Copy";
 "查询"="Look Up";
 "共享…"="Share…";
+"注册CRC委员交易"="注册CRC委员交易";
+"取消CRC委员交易"="取消CRC委员交易";
+"更新CRC委员交易"="更新CRC委员交易";
+"取回CRC委员资产交易"="取回CRC委员资产交易";
+"暂无候选委员"="暂无候选委员";
+"参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；"="参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；";
+"参选委员列表"="参选委员列表";
+"批量加入候选列表"="批量加入候选列表";
 
