--- a/UnionSquare.iOS/ELA/Base/zh-Hans.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/zh-Hans.lproj/Localizable.strings
@@ -12,9 +12,9 @@
 "投票数量-1"="投票数量";
 "rules"="https://news-zh.elastos.org/%E4%BA%A6%E6%9D%A5%E4%BA%91dpos%E8%B6%85%E7%BA%A7%E8%8A%82%E7%82%B9%E7%AB%9E%E9%80%89%E7%BB%86%E5%88%99/";
 //国家
-"阿富汗"="Afghanistan";
-"阿尔巴尼亚"="Albania";
-"阿尔及利亚"="Algeria";
+//"阿富汗"="Afghanistan";
+//"阿尔巴尼亚"="Albania";
+//"阿尔及利亚"="Algeria";
 "萨摩亚"="American Samoa";
 "安道尔共和国"="Andorra";
 "安哥拉"="Angola";
