--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -584,3 +584,16 @@
 "参选委员列表"="参选委员列表";
 "批量加入候选列表"="批量加入候选列表";
 
+"m1"="Jan.";
+"m2"="Feb.";
+"m3"="Mar.";
+"m4"="Apr.";
+"m5"="May.";
+"m6"="Jun.";
+"m7"="Jul.";
+"m8"="Aug.";
+"m9"="Sept.";
+"m10"="Oct.";
+"m11"="Nov.";
+"m12"="Dec.";
+
