--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -575,6 +575,8 @@
 "拷贝"="Copy";
 "查询"="Look Up";
 "共享…"="Share…";
+"竞选网址"="Election URL";
+"加入成功"="Added Successfully";
 "注册CRC委员交易"="注册CRC委员交易";
 "取消CRC委员交易"="取消CRC委员交易";
 "更新CRC委员交易"="更新CRC委员交易";
@@ -583,6 +585,22 @@
 "参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；"="参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；";
 "参选委员列表"="参选委员列表";
 "批量加入候选列表"="批量加入候选列表";
+"委员DID"="委员DID";
+"委员简介"="委员简介";
+"参选信息"="参选信息";
+"平均分配"="平均分配";
+"请输入票数"="请输入票数";
+"最大表决票权约："="最大表决票权约：";
+"暂无候选委员"="暂无候选委员";
+"当前排名："="当前排名：";
+"投票占比："="投票占比：";
+"得票总数："="得票总数：";
+"可用："="可用：";
+"合计："="合计：";
+"委员公钥"="委员公钥";
+"请输入委员名称（必填）"="请输入委员名称（必填）";
+"请输入委员官网URL"="请输入委员官网URL";
+
 
 "m1"="Jan.";
 "m2"="Feb.";
