--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -577,28 +577,40 @@
 "共享…"="Share…";
 "竞选网址"="Election URL";
 "加入成功"="Added Successfully";
-"注册CRC委员交易"="注册CRC委员交易";
-"取消CRC委员交易"="取消CRC委员交易";
-"更新CRC委员交易"="更新CRC委员交易";
-"取回CRC委员资产交易"="取回CRC委员资产交易";
+"请输入竞选网址"="Input Election URL";
+"是否退出本届CR选举？\n一旦退出本届选举，所有投票清零且不可恢复。"="Quit from the CR Election Race?\nAfter quitting, votes are permanently cleared";
+"批量加入候选列表"="Add to Candidate List in Batches";
+"委员DID"="Candidate DID";
+"参选信息"="Candidate Information";
+"平均分配"="Distribute Evenly";
+"请输入票数"="Enter number of votes";
+"当前排名："="Current Ranking：";
+"投票占比："="Voting Ratio：";
+"得票总数："="Total Votes：";
+"可用："="Available：";
+"合计："="Total：";
+"注册CR委员交易"="注册CR委员交易";
+"取消CR委员交易"="取消CR委员交易";
+"更新CR委员交易"="更新CR委员交易";
+"取回CR委员资产交易"="取回CR委员资产交易";
 "暂无候选委员"="暂无候选委员";
-"参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；"="参与ELA超级节点投票，需锁仓ELA。投票不消耗ELA数量；";
 "参选委员列表"="参选委员列表";
-"批量加入候选列表"="批量加入候选列表";
-"委员DID"="委员DID";
 "委员简介"="委员简介";
-"参选信息"="参选信息";
-"平均分配"="平均分配";
-"请输入票数"="请输入票数";
 "最大表决票权约："="最大表决票权约：";
 "暂无候选委员"="暂无候选委员";
-"当前排名："="当前排名：";
-"投票占比："="投票占比：";
-"得票总数："="得票总数：";
-"可用："="可用：";
-"合计："="合计：";
-"委员公钥"="委员公钥";
-"请输入委员名称（必填）"="请输入委员名称（必填）";
-"请输入委员官网URL"="请输入委员官网URL";
-
+"参选公钥"="参选公钥";
+"请输入参选昵称（必填）"="请输入参选昵称（必填）";
+"参选押金"="参选押金";
+"m1"="Jan.";
+"m2"="Feb.";
+"m3"="Mar.";
+"m4"="Apr.";
+"m5"="May.";
+"m6"="Jun.";
+"m7"="Jul.";
+"m8"="Aug.";
+"m9"="Sept.";
+"m10"="Oct.";
+"m11"="Nov.";
+"m12"="Dec.";
 
