--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -589,18 +589,18 @@
 "得票总数："="Total Votes：";
 "可用："="Available：";
 "合计："="Total：";
-"注册CR委员交易"="注册CR委员交易";
-"取消CR委员交易"="取消CR委员交易";
-"更新CR委员交易"="更新CR委员交易";
-"取回CR委员资产交易"="取回CR委员资产交易";
-"暂无候选委员"="暂无候选委员";
-"参选委员列表"="参选委员列表";
-"委员简介"="委员简介";
-"最大表决票权约："="最大表决票权约：";
-"暂无候选委员"="暂无候选委员";
-"参选公钥"="参选公钥";
-"请输入参选昵称（必填）"="请输入参选昵称（必填）";
-"参选押金"="参选押金";
+"注册CR委员交易"="Register CR member transaction";
+"取消CR委员交易"="Cancel CR member transaction";
+"更新CR委员交易"="Update CR member transaction";
+"取回CR委员资产交易"="Retrieve CR member asset transaction";
+"暂无候选委员"="No candidate members";
+"参选委员列表"="List of election participants";
+"委员简介"="Member Profile";
+"最大表决票权约："="Maximum voting rights：";
+"暂无候选委员"="No candidate members";
+"参选公钥"="Public key for election";
+"请输入参选昵称（必填）"="Please enter nickname (required)";
+"参选押金"="Election deposit";
 "m1"="Jan.";
 "m2"="Feb.";
 "m3"="Mar.";
