--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -600,17 +600,17 @@
 "参选公钥"="Public key for election";
 "请输入参选昵称（必填）"="Please enter nickname (required)";
 "参选押金"="Election deposit";
-"m1"="Jan.";
-"m2"="Feb.";
-"m3"="Mar.";
-"m4"="Apr.";
-"m5"="May.";
-"m6"="Jun.";
-"m7"="Jul.";
-"m8"="Aug.";
-"m9"="Sept.";
-"m10"="Oct.";
-"m11"="Nov.";
-"m12"="Dec.";
+"m1"="Jan";
+"m2"="Feb";
+"m3"="Mar";
+"m4"="Apr";
+"m5"="May";
+"m6"="Jun";
+"m7"="Jul";
+"m8"="Aug";
+"m9"="Sept";
+"m10"="Oct";
+"m11"="Nov";
+"m12"="Dec";
 "信息格式错误"="Did not identify";
 "小于"="Less than";
