--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -208,7 +208,7 @@
 "密码用于保护私钥和交易授权，强度非常重要. elastos不存储密码，也无法帮您找回，请务必牢记"="Password is used to protect private keys and transaction authorization. Please ensure you choose a strong password.Elastos won't store your password and won't be able to retrieve it back.  Please keep your password safe and secure.";
 "客服邮箱已复制到粘贴板"="Customer service email copied to clipboard.";
 "社区"="Community";
-"我的"="Mine";
+"我的"="Me";
 "扫码结果"="Scan result";
 "已识别收款地址"="Receiving address identified";
 "密码错误"="Password error";
@@ -588,14 +588,15 @@
 "得票总数："="Total Votes：";
 "可用："="Available：";
 "合计："="Total：";
-"注册CR委员交易"="Register CR member transaction";
-"取消CR委员交易"="Cancel CR member transaction";
-"更新CR委员交易"="Update CR member transaction";
-"取回CR委员资产交易"="Retrieve CR member asset transaction";
+"未知"="unknown";
+"注册CR参选交易"="CR Registration Transaction";
+"取消CR参选交易"="CR Cancellation Transaction";
+"更新CR参选信息交易"="CR Update Transaction";
+"取回CR参选质押资产交易"="CR Deposit Retrieve Transaction";
 "暂无候选委员"="No candidate members";
-"参选委员列表"="List of election participants";
+"参选委员列表"="Candidate List";
 "委员简介"="Member Profile";
-"最大表决票权约："="Maximum voting rights：";
+"最大表决票权约："="Maximum Voting Rights About：";
 "暂无候选委员"="No candidate members";
 "参选公钥"="Public key for election";
 "请输入参选昵称（必填）"="Please enter nickname (required)";
