--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -300,7 +300,7 @@
 //"全网投票比例："="Total Network Vote Percentage";
 "全网投票占比："="Percentage of Votes Case Online";
 "删除"= "Delete";
-"最大表决票权 " = "Max voting right ";
+"最大表决票权" = "Maximum Voting Rights ";
 "我的投票"="My Vote";
 "我要投票"="Vote";
 "重新投票"= "Recast Votes";
