--- a/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
+++ b/UnionSquare.iOS/ELA/Base/en.lproj/Localizable.strings
@@ -288,7 +288,7 @@
 "移出候选列表"= "Remove from Candidate List";
 "加入候选列表" ="Add to Candidate List";
 "查看候选列表" = "View Candidate List";
-"我的候选列表"="Candidate List";
+"我的候选列表"="My candidate List";
 "当前票数"="Current Votes";
 "投票占比"="Vote Percentage";
 "确定"="Confirm";
